--- a/www/styles.css
+++ b/www/styles.css
@@ -30,3 +30,15 @@ body {
   border: 0px;
   min-height: 500px;
 }
+
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+    color: #555;
+    cursor: default;
+    background-color: #fff;
+    border-bottom-color: #219ebc;
+    border-right-color: transparent;
+    border-left-color: transparent;
+    border-top-color: transparent;
+}
+
